<resources>
    <string name="app_name">SpadeKrashak</string>
    <string name="Accountlogin">Account Login</string>
    <string name="email">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="need_help">Need Help!</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User Register Here</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_email_mobile">Invalid Email or Mobile number</string>
    <string name="dialog_password_incorrect">Login failed..</string>
    <string name="dialog_password_incorrect_helper">Username/Password is incorrect</string>
    <string name="login_successfull">login Successfull</string>
    <string name="dialog_please_wait">"Please Wait..."</string>
    <string name="password_er">Password must be 8-32 character</string>
    <string name="title_activity_profile">Home</string>
    <string name="samepassword">Password must be same</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="internet_not_connected">Please check your internet Connection and Try again</string>
    <string name="sure_exit_text">Are you sure you want to exit ?</string>
    <string name="RegisterAccount">Register New Account</string>
    <string name="email_signup">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="role">Role</string>
    <string name="farmer">Farmer</string>
    <string name="inspector">Inspector</string>
    <string name="admin">Admin</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="old_user">Already a member? Login</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>
    <string name="title_activity_set_language">SetLanguageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="setting">Settings</string>
    <string name="profile">PROFILE</string>
    <string name="my_farm">MY FARM</string>
    <string name="activities">ACTIVITIES</string>
    <string name="settings">SETTINGS</string>
    <string name="weather">WEATHER</string>
    <string name="soil_health_card">Soil Health Card</string>
    <string name="notification">Notifications</string>
    <string name="farm_images">Farm Images</string>
    <string name="company_name">Company Name</string>
    <string name="sowing_date">Sowing Date : </string>
    <string name="crop_name">Crop Name : </string>
    <string name="harvest_date">Harvest Date : </string>
    <string name="task_completed">Task Completed</string>
    <string name="task_pending">Task Pending</string>
    <string name="inspector_name">Inspector</string>
    <string name="rating">Rating</string>
    <string name="insp_name">Bhagwan Ram</string>
    <string name="welcome">Welcome</string>
    <string name="plz_fill_profile">plz fill profile</string>
    <string name="cont_inspector">Contact Inspector For Binding Process</string>
    <string name="comment">Comment</string>
    <string name="new_pass">New Password</string>
    <string name="submit">Submit</string>
    <string name="farm_contract">Farm Contract</string>
    <string name="no_contract_form">No Contract Form Available</string>
    <string name="compulsary_field">Field marked with * are compulsory</string>
    <string name="calendar">Calendar</string>
    <string name="farm_pet_name">Farm Pet Name*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="logout">Logout</string>
    <string name="Area_in_acres">Area in acres*</string>
    <string name="spec_soil_type">Specify Soil type*</string>
    <string name="soil_type">Soil Type</string>
    <string name="irrigation_type">Irrigation Type*</string>
    <string name="special_comment">Special Comment</string>
    <string name="first_name">First Name*</string>
    <string name="middle_name">MiddleName*</string>
    <string name="last_name">LastName*</string>
    <string name="adhar_no">Aadhar Number*</string>
    <string name="pan_no">Pan Number</string>
    <string name="dob">Date of Birth*</string>
    <string name="mob_no">Mobile No*</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="landline_no">Landline No</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="compulsary">Compulsary</string>
    <string name="chemical">Chemical</string>
    <string name="is_done">Is Done</string>
    <string name="txt_comment">Text Comment</string>
    <string name="view_all_msg">View All Messages</string>
    <string name="audio_cmt">Audio Comment</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="nxt">Next</string>
    <string name="capture">Capture</string>
    <string name="upload">Upload</string>
    <string name="email_astric">Email*</string>
    <string name="save">Save</string>
    <string name="plz_enter_your_valid_email_id_or_mob">Please Enter your Registered Email Id or Mobile Number bellow: </string>
    <string name="cancel">Cancel</string>
    <string name="clk_for_img">click for image</string>
    <string name="profile_activity">ProfileActivity</string>
    <string name="farm_add_activity">FarmAddressActivity</string>
    <string name="soil_health_card_no">Soil Health Card Number</string>
    <string name="sample_collec_date">Sample Collection Date</string>
    <string name="laboratory_nm">Laboratory Name</string>
    <string name="ph_param">pH Parameter</string>
    <string name="test_value">Test Value</string>
    <string name="ec_param">EC Parameter</string>
    <string name="org_carbon">Organic Carbon (OC)</string>
    <string name="avl_nitrogen">Available Nitrogen (N)</string>
    <string name="avl_phosphorous">Available Phosphorus (P)</string>
    <string name="avl_potassium">Available Potassium (K)</string>
    <string name="avl_sulphur">Available Sulphur (S)</string>
    <string name="aval_zinc">Available Zinc (Zn)</string>
    <string name="avl_boron">Available Boron (B)</string>
    <string name="avl_iron">Available Iron (Fe)</string>
    <string name="avl_maganese">Available Manganese (Mn)</string>
    <string name="avl_copper">Available Copper (Cu)</string>
    <string name="new_txt">new text</string>
    <string name="again_new">again new</string>
    <string name="no_new_notifi">No New Notifications</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="otp_sent">otp sent</string>
    <string name="otp_response">otp response</string>
    <string name="account">Account</string>
    <string name="change_lang">Change Language</string>
    <string name="change_pass">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="share">Share</string>
    <string name="no_farm_image">No Farm Images Avialable</string>
    <string name="my_fm">My Farm</string>
    <string name="farm_name">Farm Name</string>
    <string name="special_note">Special Note</string>
    <string name="farm_address">Farm Address</string>
    <string name="my_profile">My Profile</string>
    <string name="aahdar">Aadhaar No</string>
    <string name="address">Address</string>
    <string name="capture_img">Capture Image</string>
    <string name="for_admin">For Admin</string>
    <string name="nutrient">Nutrient</string>
    <string name="ph">ph</string>
    <string name="avl_zinc">Available Zinc (Zn)</string>
    <string name="verify_farm_cont_inspector">Please Contact Inspector to verify This Farm</string>
    <string name="activity_sowing">Activity : Sowing</string>
    <string name="assign_on">Assigned On :</string>
    <string name="completed_on">Completed On :</string>
    <string name="otp">OTP</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="location">Location</string>
    <string name="day">Day</string>
    <string name="condition">Condition</string>
    <string name="max">Maximum</string>
    <string name="min">Minimum</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="notification_msg">Notification Message</string>
    <string name="noti_msg_description">Notification Message Description</string>
    <string name="avl_carbon">Available Carbon</string>
    <string name="area">Area</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_player">Record</string>
    <string name="play_player">Play</string>
    <string name="stop_player">Stop</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="error_enter_response">Enter Reponse</string>
    <string name="submit_response">Want to submit your response?</string>
    <string name="submit_option">Submit</string>
    <string name="action_submitted">Action Submitted</string>
    <string name="error_text">Network error Please Try again..</string>
    <string name="activity">Activity</string>
    <string name="activities_title">Activities</string>
    <string name="task_list">Task List</string>
    <string name="loading_text">Loading....</string>
    <string name="all_activities_pager">All Activities</string>
    <string name="pending_activities_pager">Pending Activities</string>
    <string name="calendar_title">Calendar Task</string>
    <string name="no_inspector_text">No Inspector yet</string>
    <string name="select_a_farm_first_text">Select a Farm First</string>
    <string name="please_login">Please login again....</string>
    <string name="back_press">Press Back again to Exit.</string>
    <string name="not_assigned_text">Not Assigned</string>
    <string name="edit_farm_title">Farm Information</string>
    <string name="address_error">Address cannot be null</string>
    <string name="area_error">Area can't be null</string>
    <string name="error_irrigation">Irrigation type can't be null</string>
    <string name="edit_farm_successfull">Farm Data Updated Successfully</string>
    <string name="edit_farm_failure">Unable to Update farm Data at the moment</string>
    <string name="capture_farm_images_title">Capture Farm Images</string>
    <string name="uploading_image">Uploading Image..</string>
    <string name="please_upload_all_images">Please Upload All Images</string>
    <string name="server_error">Sorry for the inconvinience please try again later</string>
    <string name="succefull_farm_addition">Successfully added Farm and Address</string>
    <string name="farm_contract_title">Farm Contract</string>
    <string name="soil_test_title">Soil Card</string>
    <string name="enter_soil_card">Enter Soil Card</string>
    <string name="farm_data_title">Farm Data</string>
    <string name="activities_images_title">Activity Images</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="forget_pass_title">Forgot Password</string>
    <string name="change_pass_title">Change Password</string>
    <string name="enter_otp_title">Enter Otp</string>
    <string name="please_wait_fetchig_otp">Please Wait Fetching Otp</string>
    <string name="dissmiss_otp_text">To dismiss click anywhere</string>
</resources>