<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_myfarm"
        android:enabled="true"
        android:icon="@drawable/ic_local_florist_grey_18dp"
        android:title="@string/my_farm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_weather"
        android:enabled="true"
        android:icon="@drawable/ic_cloud_queue_grey_18dp"
        android:title="@string/weather"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_activities"
        android:enabled="true"
        android:icon="@drawable/ic_content_paste_mid_grey_18dp"
        android:title="@string/activities"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_outline_mid_grey_18dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settingss"
        android:enabled="true"
        android:icon="@drawable/ic_settings_mid_grey_18dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>