<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logInBg"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/login_title_registor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
         />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_registor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edesg_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="10dp">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compulsary_field"
                    android:textSize="8sp"
                    android:textColor="@color/black"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/firstnameprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/name_dark_24"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                        android:inputType="textPersonName|textCapSentences"
                        android:singleLine="true"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/first_name"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Middlenameprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/name_dark_24"
                        android:singleLine="true"
                        android:hint="@string/middle_name"
                        android:textColor="@color/ettextbrown"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                        android:inputType="textPersonName|textCapWords"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Lastnameprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/name_dark_24"
                        android:hint="@string/last_name"
                        android:textColor="@color/ettextbrown"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                        android:inputType="textPersonName|textCapSentences"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Aadharnoprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/card_dark_24"
                        android:hint="@string/adhar_no"
                        android:textColor="@color/ettextbrown"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Pannoprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/card_dark_24"
                        android:inputType="textCapCharacters"
                        android:capitalize="characters"
                        android:textColor="@color/ettextbrown"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        android:singleLine="true"
                        android:hint="@string/pan_no"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dobprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/calendar_date_24_dark"
                        android:hint="@string/dob"
                        android:textColor="@color/ettextbrown"
                        android:clickable="true"
                        android:inputType="date"
                        android:drawableRight="@drawable/calendar_dark_24"
                        />
                </android.support.design.widget.TextInputLayout>

                <!--
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/addressidprofile"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/phone"
                                    android:drawableTint="#FF4081"
                                    android:singleLine="true"
                                    android:hint="Address Id"
                                    android:inputType="text" />
                            </android.support.design.widget.TextInputLayout>
                -->


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobilenoprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/mobile_dark_green_24"
                        android:singleLine="true"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/mob_no"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/alternatemobprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/mobile_dark_green_24"
                        android:singleLine="true"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/alternate_mobile_no"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/landlinenoprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/landline_dark_24"
                        android:textColor="@color/ettextbrown"
                        android:singleLine="true"
                        android:hint="@string/landline_no"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailfillprofile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/email_dark_24"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/email_astric"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/addl1profileadd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/address_dark_24"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/address_line_1"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/addl2profileadd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/address_dark_24"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/address_line_2"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/addl3profileadd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/address_dark_24"
                        android:textColor="@color/ettextbrown"
                        android:hint="@string/address_line_3"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <TextView
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textColor="@color/saddlebrown"
                        android:layout_height="wrap_content"
                        android:text="@string/country"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >
                        <Spinner
                            android:id="@+id/countryprofileadd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/mail"
                            android:drawableTint="#FF4081"
                            android:singleLine="true"
                            android:textColor="@color/ettextbrown"
                            android:hint="@string/country"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <TextView
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/saddlebrown"
                        android:text="@string/state"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/stateprofileadd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/mail"
                            android:drawableTint="#FF4081"
                            android:textColor="@color/ettextbrown"
                            android:singleLine="true"
                            android:hint="@string/state"
                            android:inputType="number"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <TextView
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textColor="@color/saddlebrown"
                        android:layout_height="wrap_content"
                        android:text="@string/city"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner

                            android:id="@+id/cityprofileadd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/mail"
                            android:drawableTint="#FF4081"
                            android:textColor="@color/ettextbrown"
                            android:singleLine="true"
                            android:hint="@string/city"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/Saveprofile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


                <!--<Button
                    android:id="@+id/testprofile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="Test"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />
    -->

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>